# conversational-rag-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: server.py
