[tool.poetry]
name = "conversational-rag-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
conversational-rag = {path = "packages/conversational-rag", develop = true}
conversational-rag-external-history = {path = "packages/conversational-rag-external-history", develop = true}
conversational-rag-external-history-pinecone = {path = "packages/conversational-rag-external-history-pinecone", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
